Support channel handles for live lookup